--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <ul class="mobile">    
     
  <li> <a href="index.html">Home</a></li>
- <li> <a href="chapiter.html">Chapiter</a></li>
+ <li> <a href="chapter.html">Chapter</a></li>
  <li> <a href="#">About</a></li>
  <li> <a href="#">Comment</a></li>
  <li> <a href="#">FAQ</a></li>
@@ -31,8 +31,8 @@
     <div class="dropdown">
       <button class="dropbtn">Navigation ˅</button>
       <div class="dropdown-content">
-        <a href="#">Menu</a>
-        <a href="chapiter.html">Chapiter</a>
+        <a href="index.html">Menu</a>
+        <a href="chapter.html">Chapter</a>
         <a href="#">About</a>
         <a href="#">Comment</a>
         <a href="#">FAQ</a>
